--- a/Tugas-16-VueCLI/vue-ilham/package.json
+++ b/Tugas-16-VueCLI/vue-ilham/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
